...
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_profile_blog"
            app:layout_constraintTop_toTopOf="@+id/bio" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_favorite_24"
            android:tint="@color/white"
...
